--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -136,7 +136,7 @@
   background-color: #ca220f;
 }
 .page-template-page-homepage-php .programStories li [data-topic="domov"] {
-  background-color: #a82da4;
+  background-color: #e29c05;
 }
 .page-template-page-homepage-php .programStories li [data-topic="kultura"] {
   background-color: #8ebf28;
@@ -220,6 +220,34 @@ a.img {
   width: 100%;
   height: 100%;
   display: inline-block;
+}
+a[data-topic="pohyb"] {
+  color: #ca220f;
+  border-color: #ca220f;
+}
+a[data-topic="domov"] {
+  color: #e29c05;
+  border-color: #e29c05;
+}
+a[data-topic="kultura"] {
+  color: #8ebf28;
+  border-color: #8ebf28;
+}
+a[data-topic="ferhra"] {
+  color: #19aabf;
+  border-color: #19aabf;
+}
+a[data-topic="vzdelani"] {
+  color: #222081;
+  border-color: #222081;
+}
+a[data-topic="bydleni"] {
+  color: #a82da4;
+  border-color: #a82da4;
+}
+a[data-topic="zdravi"] {
+  color: #de1879;
+  border-color: #de1879;
 }
 hr {
   clear: both;
