--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -477,6 +477,7 @@ footer[role="general"] {
 .programStories {
 	list-style-type: none;
 	padding: 0;
+	margin: 1em 0;
 
 	li {
 		text-align: center;
