--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -338,6 +338,11 @@ footer[role="general"] {
 	background: white;
 	border: none;
 	text-transform: uppercase;
+	margin: 0;
+
+	.navbar {
+		margin: 0;
+	}
 
 	.navbar-brand {
 		border: none;
@@ -524,6 +529,35 @@ footer[role="general"] {
 				font-size: 1.5em;
 			}
 
+		}
+
+	}
+
+}
+
+.candidateHeader {
+	background-repeat: no-repeat;
+	background-size: contain;
+
+	.candidateInfoWrapper {
+		background: black;
+		color: white;
+		margin-top: 57%;
+
+		.candidateInfo {
+			padding: 4em;
+		}
+
+		h1 {
+			.proxima;
+			text-align: center;
+			font-weight: 900;
+			font-size: 6em;
+			margin: 0;
+		}
+
+		.lead {
+			text-align: center;
 		}
 
 	}
