--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -276,6 +276,9 @@ footer[role="general"] .links li {
 #chcuNav .navbar-brand img {
   height: 13px;
 }
+#chcuNav a {
+  border: none;
+}
 @media screen and (min-width: 768px) {
   #chcuNav {
     text-align: center;
@@ -464,23 +467,36 @@ footer[role="general"] .links li {
   width: 50%;
   margin: 0;
   text-align: center;
+  vertical-align: top;
 }
 .candidateWants h2 {
   font-family: "proxima-nova", sans-serif;
   text-transform: uppercase;
   font-size: 2.5em;
   font-weight: 900;
+  margin: 1em 0 0 0;
+}
+.candidateWants h2 i {
+  display: block;
 }
 .candidateWants ul {
   list-style-type: none;
-  padding: 0;
+  padding: 0 2em;
   margin: 1em 0 0 0;
+  font-size: 1.4em;
+  line-height: 150%;
 }
 .candidateDoWant {
   border-right: 1px solid black;
 }
+.candidateDoWant h2 {
+  color: #8ebf28;
+}
 .candidateDoNotWant {
   border-left: 1px solid black;
+}
+.candidateDoNotWant h2 {
+  color: #ca220f;
 }
 .candidateBioHeaderWrapper {
   text-align: center;
@@ -494,8 +510,11 @@ footer[role="general"] .links li {
   background: black;
   color: white;
   padding: .75em 0;
-  margin: 0 0 1em 0;
+  margin: 0 0 .5em 0;
   border-radius: 50%;
+}
+.candidateBio * {
+  font-size: 1.2em;
 }
 .button {
   font-family: "proxima-nova", sans-serif;
