--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -515,10 +515,17 @@ footer[role="general"] {
 	background-size: contain;
 	margin-bottom: 0;
 
+	&.hasPortrait {
+
+		.candidateInfoWrapper {
+			margin-top: 57%;
+		}
+
+	}
+
 	.candidateInfoWrapper {
 		background: black;
 		color: white;
-		margin-top: 57%;
 
 		.candidateInfo {
 			padding: 4em;
@@ -529,13 +536,13 @@ footer[role="general"] {
 			text-align: center;
 			font-weight: 900;
 			font-size: 6em;
-			margin: 0 0 .25em 0;
+			margin: 0;
 		}
 
 		.lead {
 			text-align: center;
 			font-size: 1.25em;
-			margin: 0;
+			margin: 1em 0 0 0;
 		}
 
 	}
@@ -592,6 +599,11 @@ footer[role="general"] {
 
 .candidateBioHeaderWrapper {
 	text-align: center;
+
+	&.hasNotWants {
+		margin: 2em 0 0 0;
+	}
+
 }
 
 .candidateBioHeader {
