--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -470,9 +470,19 @@ footer[role="general"] .links li {
   list-style-type: none;
   text-align: center;
   margin: 2em 0 0 0;
+  font-size: 1.2em;
 }
 .candidateUrls li {
   display: inline-block;
+  margin: 0 1em;
+}
+.candidateUrls a {
+  color: white;
+  border-color: white;
+}
+.candidateUrls a:hover {
+  color: #de1879;
+  border-color: #de1879;
 }
 .candidateUrls a.icon {
   border: none;
@@ -486,6 +496,9 @@ footer[role="general"] .links li {
   padding: .4em;
   background: white;
   border-radius: 50%;
+  display: inline-block;
+  margin: 0 .25em;
+  vertical-align: middle;
 }
 .candidateWants {
   display: inline-block;
