--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -464,7 +464,7 @@ footer[role="general"] .links li {
   font-size: 1.25em;
   margin: 1em 0 0 0;
 }
-.candidateUrls {
+.candidateContacts {
   color: white;
   padding: 0;
   list-style-type: none;
@@ -472,26 +472,26 @@ footer[role="general"] .links li {
   margin: 2em 0 0 0;
   font-size: 1.2em;
 }
-.candidateUrls li {
+.candidateContacts li {
   display: inline-block;
   margin: 0 1em;
 }
-.candidateUrls a {
+.candidateContacts a {
   color: white;
   border-color: white;
 }
-.candidateUrls a:hover {
+.candidateContacts a:hover {
   color: #de1879;
   border-color: #de1879;
 }
-.candidateUrls a.icon {
+.candidateContacts a.icon {
   border: none;
 }
-.candidateUrls a.icon:hover i {
+.candidateContacts a.icon:hover i {
   color: white;
   background: #de1879;
 }
-.candidateUrls i {
+.candidateContacts i {
   color: black;
   padding: .4em;
   background: white;
@@ -557,6 +557,16 @@ footer[role="general"] .links li {
 .candidateBio * {
   font-size: 1.2em;
   line-height: 150%;
+}
+.candidateUrls {
+  margin: 1em 0;
+  text-align: center;
+  padding: 0;
+  list-style-type: none;
+}
+.candidateUrls li {
+  display: inline-block;
+  margin: 0 1em;
 }
 .button {
   font-family: "proxima-nova", sans-serif;
