--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -549,7 +549,7 @@ footer[role="general"] {
 
 }
 
-.candidateUrls {
+.candidateContacts {
 	color: white;
 	padding: 0;
 	list-style-type: none;
@@ -672,6 +672,19 @@ footer[role="general"] {
 .candidateBio * {
 	font-size: 1.2em;
 	line-height: 150%;
+}
+
+.candidateUrls {
+	margin: 1em 0;
+	text-align: center;
+	padding: 0;
+	list-style-type: none;
+
+	li {
+		display: inline-block;
+		margin: 0 1em;
+	}
+
 }
 
 .button {
