--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -560,6 +560,11 @@ footer[role="general"] {
 	li {
 		display: inline-block;
 		margin: 0 1em;
+
+		&.socialNetwork {
+			margin: 0 .25em;
+		}
+
 	}
 
 	a {
