--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -594,7 +594,7 @@ footer[role="general"] {
 
 	i {
 		color: black;
-		padding: .4em;
+		padding: .5em .4em .4em .4em;
 		background: white;
 		border-radius: 50%;
 		display: inline-block;
