--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -627,9 +627,14 @@ footer[role="general"] {
 	ul {
 		list-style-type: none;
 		padding: 0 2em;
-		margin: 1em 0 0 0;
+		margin: .75em 0 0 0;
 		font-size: 1.4em;
 		line-height: 150%;
+
+		li {
+			margin: .25em 0;
+		}
+
 	}
 
 }
