--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -179,6 +179,10 @@ hr {
 	text-align: center;
 	margin: .5em 0;
 
+	@media screen and (max-width: @screen-xs) {
+		font-size: 2em;
+	}
+
 	@media screen and (max-width: @screen-sm) {
 		font-size: 2em;
 		line-height: @line-height * .75;
@@ -243,10 +247,30 @@ hr {
 		font-weight: 900;
 		font-size: 8em;
 		text-transform: uppercase;
+
+		@media screen and (max-width: @screen-sm) {
+			font-size: 5em;
+			line-height: @line-height * .7;
+		}
+
+		@media screen and (max-width: @screen-xs) {
+			font-size: 3em;
+			line-height: @line-height * .7;
+		}
+
 	}
 
 	.lead {
 		font-size: 1.4em;
+
+		@media screen and (max-width: @screen-sm) {
+			font-size: 1.2em;
+		}
+
+		@media screen and (max-width: @screen-xs) {
+			font-size: 1em;
+		}
+
 	}
 
 }
