--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -560,7 +560,7 @@ footer[role="general"] {
 			}
 
 			@media screen and (max-width: @screen-sm) {
-				padding: 2em;
+				padding: 2.5em 1.5em;
 			}
 
 		}
