--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -487,7 +487,7 @@ footer[role="general"] .links li {
 }
 @media screen and (max-width: 768px) {
   .candidateHeader .candidateInfoWrapper .candidateInfo {
-    padding: 2em;
+    padding: 2.5em 1.5em;
   }
 }
 .candidateHeader .candidateInfoWrapper h1 {
