--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -555,11 +555,11 @@ footer[role="general"] {
 		.candidateInfo {
 			padding: 4em;
 
-			@media screen and (max-width: @screen-xs) {
+			@media screen and (max-width: @screen-sm) {
 				padding: 3em;
 			}
 
-			@media screen and (max-width: @screen-sm) {
+			@media screen and (max-width: @screen-xs) {
 				padding: 2.5em 1.5em;
 			}
 
@@ -572,11 +572,11 @@ footer[role="general"] {
 			font-size: 6em;
 			margin: 0;
 
-			@media screen and (max-width: @screen-xs) {
+			@media screen and (max-width: @screen-sm) {
 				font-size: 4em;
 			}
 
-			@media screen and (max-width: @screen-sm) {
+			@media screen and (max-width: @screen-xs) {
 				font-size: 2em;
 			}
 
@@ -605,15 +605,15 @@ footer[role="general"] {
 		display: inline-block;
 		margin: 0 1.5em;
 
-		@media screen and (max-width: @screen-sm) {
+		@media screen and (max-width: @screen-xs) {
 			display: block;
-			margin: 0;
+			margin: .5em 0;
 		}
 
 		&.socialNetwork {
 			margin: 0 .1em;
 
-			@media screen and (max-width: @screen-sm) {
+			@media screen and (max-width: @screen-xs) {
 				display: inline-block;
 			}
 
@@ -665,7 +665,7 @@ footer[role="general"] {
 	text-align: center;
 	vertical-align: top;
 
-	@media screen and (max-width: @screen-sm) {
+	@media screen and (max-width: @screen-xs) {
 		display: block;
 		width: 100%;
 		margin: 0 0 2em 0;
@@ -702,7 +702,7 @@ footer[role="general"] {
 .candidateDoWant {
 	border-right: 1px solid black;
 
-	@media screen and (max-width: @screen-sm) {
+	@media screen and (max-width: @screen-xs) {
 		border: none;
 	}
 
@@ -715,7 +715,7 @@ footer[role="general"] {
 .candidateDoNotWant {
 	border-left: 1px solid black;
 
-	@media screen and (max-width: @screen-sm) {
+	@media screen and (max-width: @screen-xs) {
 		border: none;
 	}
 
@@ -751,7 +751,7 @@ footer[role="general"] {
 	font-size: 1.2em;
 	line-height: 150%;
 
-	@media screen and (max-width: @screen-sm) {
+	@media screen and (max-width: @screen-xs) {
 		font-size: 1em;
 	}
 
