--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -691,6 +691,10 @@ footer[role="general"] {
 		font-size: 1.25em;
 		line-height: 150%;
 
+		@media screen and (max-width: @screen-xs) {
+			padding: 0;
+		}
+
 		li {
 			margin: .25em 0;
 		}
