--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -829,3 +829,42 @@ footer[role="general"] {
 	}
 
 }
+
+.programStoryWrapper {
+	margin-top: 2em;
+}
+
+.programStoryText {
+	font-size: 1em;
+
+	p {
+		font-size: 1.1em;
+		line-height: 150%;
+	}
+
+}
+
+.programBrowse {
+
+	&.prev {
+		text-align: left;
+	}
+
+	&.next {
+		text-align: right;
+	}
+
+	a {
+		.proxima;
+		font-weight: 900;
+		font-size: 1.2em;
+		color: #B5B5B5;
+		border-color: #B5B5B5;
+		text-transform: uppercase;
+	}
+
+	.line {
+		display: block;
+	}
+
+}
