--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -34,18 +34,17 @@
 .page-template-page-homepage-php {
 
 	h1 {
-		margin: 2em 0 0 0;
+		margin: 2em 0 1em 0;
+		display: block;
+		background-image: url('logo_both.png');
+		background-size: contain;
+		background-repeat: no-repeat;
 
 		@media screen and (max-width: @screen-sm) {
 			margin: 1em 0 0 0;
 		}
 
 		.chcu {
-			display: block;
-			background-image: url('chcu.png');
-			background-size: contain;
-			background-repeat: no-repeat;
-			margin: .75em 0;
 
 			.text {
 				display: none;
@@ -53,11 +52,6 @@
 		}
 
 		.logo {
-			display: block;
-			background-image: url('logo.png');
-			background-size: contain;
-			background-repeat: no-repeat;
-			margin: .75em 0;
 
 			.text {
 				display: none;
@@ -867,4 +861,8 @@ footer[role="general"] {
 		display: block;
 	}
 
+}
+
+.manifestoButtonContainer {
+	margin: 1.5em 0 5em 0;
 }
